# ChaosRAG

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml
data/processed/: parsed_data.json  parsed_data_with_descriptions.json
notebooks/: explore_data.ipynb
src/: chunk_split.py  image_to_text.py  pdf_parser.py  vector_to_db.py
