[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chaosrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
package-mode = false  

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
PyMuPDF = ">=1.23.0"
tqdm = ">=4.66.0"
google-genai = ">=0.3.0"
python-dotenv = ">=1.0.0"
pillow = ">=12.1.0"
langchain-weaviate = ">=0.0.6"
weaviate-client = ">=4.19.2"
langchain-text-splitters = ">=1.1.0"
langchain-google-genai = ">=4.2.0"
pandas = ">=2.3.3"
plotly = ">=6.5.2"
scikit-learn = ">=1.8.0"
nbformat = ">=5.10.4"
ipykernel = ">=7.1.0"
ipywidgets = ">=8.1.8"
streamlit = ">=1.53.0"
sentence-transformers = ">=5.2.0"